--- a/conferences/WAF_2016/Seguridad/waf2016.bib
+++ b/conferences/WAF_2016/Seguridad/waf2016.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7b.
+% This file was created with JabRef 2.9.2.
 % Encoding: UTF-8
 
 @INPROCEEDINGS{Bonaci2012,
@@ -112,17 +112,17 @@
 @INPROCEEDINGS{Denning2009,
   author = { Denning, Tamara and Matuszek, Cynthia and Koscher, Karl and Smith,
 	Joshua R. and Kohno, Tadayoshi},
-  title = {A Spotlight on Security and Privacy Risks with Future Household Robots:
-	Attacks and Lessons},
+  title = {{A} {S}potlight on {S}ecurity and {P}rivacy {R}isks with {F}uture
+	{H}ousehold {R}obots: {A}ttacks and {L}essons},
   booktitle = {Proceedings of the 11th International Conference on Ubiquitous Computing},
   year = { 2009}
 }
 
 @INPROCEEDINGS{fitzgerald2013developing,
   author = {Fitzgerald, Conor},
-  title = {Developing baxter},
+  title = {{Developing Baxter}},
   booktitle = {Technologies for Practical Robot Applications (TePRA), 2013 IEEE
-	International Conference on},
+	International Conference},
   year = {2013},
   pages = {1--6},
   organization = {IEEE}
@@ -162,7 +162,7 @@
 @ARTICLE{huitsing2008attack,
   author = {Huitsing, Peter and Chandia, Rodrigo and Papa, Mauricio and Shenoi,
 	Sujeet},
-  title = {Attack taxonomies for the Modbus protocols},
+  title = {{A}ttack taxonomies for the {M}odbus protocols},
   journal = {International Journal of Critical Infrastructure Protection},
   year = {2008},
   volume = {1},
@@ -171,9 +171,9 @@
 }
 
 @INPROCEEDINGS{Martin2014,
-  author = {Martín, Francisco and Mateos, José and Lera, Francisco Javier and
-	Bustos, Pablo and Matellán, Vicente},
-  title = {A robotic platform for domestic applications},
+  author = {Mart\'in, Francisco and Mateos, Jos\'e and Lera, Francisco Javier
+	and Bustos, Pablo and Matell\'an, Vicente},
+  title = {{A} robotic platform for domestic applications},
   booktitle = {XV Workshop of Physical Agents},
   year = {2014}
 }
@@ -299,15 +299,15 @@
 @CONFERENCE{ROS09,
   author = {Morgan Quigley and Ken Conley and Brian P. Gerkey and Josh Faust
 	and Tully Foote and Jeremy Leibs and Rob Wheeler and Andrew Y. Ng},
-  title = {ROS: an open-source Robot Operating System},
+  title = {{ROS}: an open-source {R}obot {O}perating {S}ystem},
   booktitle = {ICRA Workshop on Open Source Software},
   year = {2009},
   attachments = {http://www.willowgarage.com/sites/default/files/icraoss09-ROS.pdf}
 }
 
 @ARTICLE{sattarova2007security,
-  author = {Sattarova Feruza, Y and Kim, Tao-hoon},
-  title = {IT security review: Privacy, protection, access control, assurance
+  author = {Sattarova Feruza, Y. and Kim, Tao-hoon},
+  title = {{IT} security review: {P}rivacy, protection, access control, assurance
 	and system security},
   journal = {International Journal of Multimedia and Ubiquitous Engineering},
   year = {2007},
